# opticaldesign

./: .gitignore  README.md  analytical.py  analytical_new.py  pyproject.toml  readme_new.md  requirements.txt  setup.py  system.py
Notebooks/: Plot System.py  system_compact.py
old/: README.md  analytical.py  simulation.py  zmax_49332ink.zmx
src/prisms/: __init__.py  analytical.py  library.py  system.py
