[tool.poetry]
name = "prisms"
version = "0.1.0"
description = "Optical design of laser prism scanner known as Hexastorm"
authors = ["Rik Starmans <hstarmans@hexastorm.com>"]
license = "GPLv3"
packages = [
    { include = "prisms", from = "src" },
]


[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyter = "^1.1.1"
jupyterlab = "^4.2.5"
pythreejs = "^2.4.2"
cython = "^3.0.11"
scipy = ">=1.14.0"
matplotlib = "^3.9.2"
pyyaml = "^6.0.2"
imageio = "^2.35.1"
sympy = "^1.13.3"
pyoptools = {git = "https://github.com/hstarmans/pyoptools"}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "cython"]
build-backend = "poetry.core.masonry.api"
